--- a/lemoncordv2/package.json
+++ b/lemoncordv2/package.json
@@ -4,21 +4,22 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.10.1",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/material": "^5.7.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.14",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "buffer": "^6.0.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^6.4.3",
     "react-s3": "^1.3.1",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "yarn start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
