--- a/lemoncordv2/package.json
+++ b/lemoncordv2/package.json
@@ -6,6 +6,7 @@
     "@auth0/auth0-react": "^1.10.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
