--- a/lemoncordv2/package.json
+++ b/lemoncordv2/package.json
@@ -6,12 +6,15 @@
     "@auth0/auth0-react": "^1.10.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "buffer": "^6.0.3",
+    "material-ui-audio-player": "^1.7.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.4.3",
